# COMP.SEC.300

./: .gitignore  CMakeLists.txt  Documentation.docx  Jenkinsfile  MyManager.pptx  README.md  build.bat  main.cpp  notes  sonar-project.properties  vcpkg.json
.github/workflows/: ci.yml
app/: entry.hpp  vault_manager.cpp  vault_manager.hpp
crypto/: crypto_manager.cpp  crypto_manager.hpp
storage/: file_storage.cpp  file_storage.hpp
tests/: test_crypto.cpp  test_storage.cpp  test_vault.cpp
